deleting project
